terraform/modules/network/main.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = var.vpc_name
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}

resource "aws_subnet" "dmz" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "dmz"
  }
}

resource "aws_subnet" "internal" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "internal"
  }
}

resource "aws_security_group" "dmz_ssh" {
  name        = "default-dmz"
  description = "Allow SSH into DMZ subnet."
  vpc_id      = aws_vpc.main.id
}

resource "aws_security_group_rule" "dmz_ssh" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"

  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.dmz_ssh.id
}
